# qwickguard

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci-debug.yml  claude.yml  codex.yml
agent/: pyproject.toml
agent/scripts/: backup.sh  install-agent-linux.sh  install-agent.sh  install-backup-cron.sh  uninstall-agent.sh  verify-backups.sh
agent/src/qwickguard_agent/: analyzer.py  config.py  healer.py  main.py  models.py  prompts.py  reporter.py
agent/src/qwickguard_agent/collectors/: __init__.py  docker.py  processes.py  services.py  system.py
agent/templates/: com.qwickapps.qwickguard-agent.plist  qwickguard-agent.service
agent/tests/: test_analyzer.py  test_collectors_docker.py  test_collectors_processes.py  test_collectors_services.py  test_collectors_system.py  test_healer.py  test_main.py  test_reporter.py
brain/: Dockerfile  pyproject.toml
brain/prompts/: daily_digest.md  diagnosis.md
brain/src/qwickguard_brain/: config.py  digest.py  escalation.py  main.py  notifications.py  registry.py  storage.py
brain/src/qwickguard_brain/api/: agents.py  dashboard.py  health.py
brain/src/qwickguard_brain/templates/: audit.html  base.html  dashboard.html  metrics.html  notifications.html  runbook_detail.html  runbooks.html
brain/src/qwickguard_brain/templates/partials/: metrics_charts.html  system_status.html
brain/tests/: test_api_agents.py  test_digest.py  test_escalation.py  test_notifications.py
configs/: macmini-devserver.yaml  oci-ci.yaml  oci-gateway.yaml  oci-main.yaml
docs/plans/: 2026-02-23-m3-local-agent.md  (+4 more)
(+4 files in other folders)
