[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwickguard-brain"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.12", "httpx>=0.27"]
